--- a/packages/client/src/pages/PortalSettings/categories/ai-settings/providers/dialogs/add-update/ModelSelectorPopup.module.scss
+++ b/packages/client/src/pages/PortalSettings/categories/ai-settings/providers/dialogs/add-update/ModelSelectorPopup.module.scss
@@ -34,7 +34,7 @@
     width: 285px;
     max-width: 285px;
     border-radius: 8px;
-    padding: 12px 16px;
+    padding: 12px 8px 12px 16px;
     box-sizing: border-box;
     margin-top: 8px;
 
@@ -53,7 +53,7 @@
     }
 
     :global(.scroll-drop-down-item) {
-      margin-inline-end: -17px;
+      padding-inline-end: 8px;
     }
   }
 }
@@ -127,7 +127,7 @@
   visibility: hidden;
   margin-inline-start: auto;
   padding-inline-start: 12px;
-  margin-inline-end: 3px;
+  margin-inline-end: 20px;
 
   --icon-button-hover-color: var(--icon-button-color);
 
@@ -151,6 +151,15 @@
       max-width: 100vw;
       max-height: calc(100vh - 64px);
       border-radius: 6px 6px 0 0;
+      padding-inline-end: 0;
     }
+  }
+}
+
+.mobileScrollContent {
+  padding-inline-end: 0;
+
+  .modelRow .pencilIcon {
+    margin-inline-end: 12px;
   }
 }
